syntax = "proto3";
package listah.v1;


option go_package = "cornucopia/listah/apps/api/internal/pkg/proto/v1";


import "v1/commons.proto";
import "google/protobuf/timestamp.proto";
import "gnostic/openapi/v3/annotations.proto";


message FilterCategoryQuery {
  string filter = 1;
  string row_count = 2 [json_name = "rowCount"];
}



message FilterServiceCategoryReadRequest {
  string user_id = 1 [json_name = "userId"];
  int32 pageSize = 300 [json_name = "pageSize"];
  int32 pageNumber = 301 [json_name = "pageNumber"];
  string sortQuery = 302 [json_name = "sortQuery"];
}
message FilterServiceCategoryReadResponse {
  repeated FilterCategoryQuery filters = 1;
  //
  string userId = 200 [json_name = "userId"];
  int32 pageSize = 300 [json_name = "pageSize"];
  int32 pageNumber = 301 [json_name = "pageNumber"];
  string sortQuery = 302 [json_name = "sortQuery"];
}

message FilterServiceItemReadRequest {
  string user_id = 1 [json_name = "userId"];
  repeated string filters = 2;
  int32 pageSize = 300 [json_name = "pageSize"];
  int32 pageNumber = 301 [json_name = "pageNumber"];
  string sortQuery = 302 [json_name = "sortQuery"];
}
message FilterServiceItemReadResponse {
  repeated Item items = 1;
  repeated string filters = 2;
  string userId = 200 [json_name = "userId"];
  int32 pageSize = 300 [json_name = "pageSize"];
  int32 pageNumber = 301 [json_name = "pageNumber"];
  string sortQuery = 302 [json_name = "sortQuery"];
}


service FilterService {
  rpc ReadCategory(FilterServiceCategoryReadRequest) returns (FilterServiceCategoryReadResponse){
    option idempotency_level = NO_SIDE_EFFECTS;
    option (gnostic.openapi.v3.operation).description = "Read Item Count By Filter Category";
  }
  rpc ReadItem(FilterServiceItemReadRequest) returns (FilterServiceItemReadResponse){
    option idempotency_level = NO_SIDE_EFFECTS;
    option (gnostic.openapi.v3.operation).description = "Read Item By Filter Category";
  }
}
